# POVDisplay

./: .gitignore  CMakeLists.txt  CMakeLists_unittesting.txt  LICENSE  POVDisplay.cywrk  README.md  arm_embedded_toolchain.txt
BLE101/app/: build.gradle
BLE101/gradle/wrapper/: gradle-wrapper.properties
KicadLibrary/: Nickslib.lib
KicadLibrary.pretty/: LED_5050.kicad_mod
Mechanical/: BalanceSlider.FCStd  BalanceWeight.FCStd  MotorMount.rsdoc  MotorMount2.rsdoc  PCBMotorMount.FCStd  PCBMotorMount.FCStd1  PCBMount.FCStd  POVBaseDriver.FCStd  POVDisplay.FCStd  TopMotorMount.FCStd  WoodMounts.FCStd  motorMount.stl  motorMount.stp  motor_adapter.FCStd  motor_adapter.FCStd1
POVBase/: CMakeLists.txt
POVBase.cydsn/: POVBase.cydwr  POVBase.cyfit  POVBase.cyprj  POVBase.cyprj.Nick Butts  main.c
POVBase.cydsn/Export/: PSoCCreatorExportIDE.xml
POVBase.cydsn/TopDesign/: TopDesign.cysch
POVBase/include/: AnalogVoltage.h  Clocks.h  CommandParser.h  Constants.h  GPIO.h  Utilities.h  mxconstants.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h  usb_device.h  usbd_conf.h
POVBase/linker/: stm32_flash_debug.ld
POVBase/src/: AnalogVoltage.c  Clocks.c  CommandParser.c  EarlyInit.c  GPIO.c  main.c  newlibstub.c  ramFunctionInit.c  startup_stm32l053xx.S  stm32l0xx_hal_msp.c  stm32l0xx_it.c  usbd_cdc_if.c  usbd_conf.c
POVBase2.cydsn/: POVBase2.cydwr  POVBase2.cyfit  POVBase2.cyprj  POVBase2.cyprj.Nick Butts  main.c  test.cycdx  test.cyfit  test.cyprj.Nick Butts  test.rpt
POVBase2.cydsn/Export/: PSoCCreatorExportIDE.xml
POVBase2.cydsn/TopDesign/: TopDesign.cysch
POVBaseCoil/: POVBaseCoil.kicad_pcb  POVBaseCoil.pro  POVBaseCoil.sch
POVBaseController/: POVBaseController  POVBaseController.bak  POVBaseController.csv  POVBaseController.kicad_pcb  POVBaseController.kicad_pcb-bak  POVBaseController.net  POVBaseController.pro  POVBaseController.sch  POVBaseController.xml
POVBaseController/myfootprint.pretty/: QFN-20.kicad_mod  QFN_24.kicad_mod  QFP_24.kicad_mod  SO-8.kicad_mod  TDK_Inductor_12.95x9.4x5.08.kicad_mod  VIA-13MILS.kicad_mod
POVBaseHBridge.cydsn/: POVBaseHBridge.cycdx  POVBaseHBridge.cydwr  POVBaseHBridge.cyfit  POVBaseHBridge.cyprj  POVBaseHBridge.cyprj.Nick Butts  POVBaseHBridge.rpt  POVBaseHBridge.svd  POVBaseHBridge_timing.html  POVBase_Copy_01.rpt  main.c
POVBaseHBridge.cydsn/Export/: PSoCCreatorExportIDE.xml
POVBaseHBridge.cydsn/Generated_Source/PSoC5/: BUTTON.c  BUTTON.h  CoilNeg.c  CoilNeg.h  CoilNeg_aliases.h  CoilPlus.c  CoilPlus_aliases.h  PWM.h  Pin_COIL.c  Pin_COIL.h  Pin_COIL_aliases.h  cymetadata.c  (+4 more)
POVBaseHBridge.cydsn/TopDesign/: TopDesign.cysch
POVBaseHBridge.cydsn/codegentemp/: BUTTON_aliases.h  CoilPlus.h  POVBaseHBridge.bvf  POVBaseHBridge.ctl  POVBaseHBridge.cyfit  POVBaseHBridge.dsf  POVBaseHBridge.pci  POVBaseHBridge.pco  POVBaseHBridge.route  POVBaseHBridge.rt_log  POVBaseHBridge.sdc  POVBaseHBridge.sdf  POVBaseHBridge.svd  POVBaseHBridge.tr  POVBaseHBridge.v  POVBaseHBridge.vh2  POVBaseHBridge.wde  POVBaseHBridge_p.pco  POVBaseHBridge_p.vh2  POVBaseHBridge_r.lib  POVBaseHBridge_r.vh2  POVBaseHBridge_t.vh2  POVBaseHBridge_u.sdc  bitstream.txt  cyfitter.h  cyfitteriar.inc  elab_dependencies.txt  generated_files.txt  project_ids.txt
POVRotate.cydsn/: LED.c  LED.h  Options.h  POVRotate.cydwr  POVRotate.cyfit  POVRotate.cyprj  POVRotate.cyprj.Nick Butts  app_Ble.c  app_Ble.h  app_LED.c  app_LED.h  app_UART.c  debug.c  debug.h  main.c  types.h  uartBuf.c  uartBuf.h
POVRotate.cydsn/Export/: PSoCCreatorExportIDE.xml
POVRotate.cydsn/TopDesign/: TopDesign.cysch
POVRotateHW/: BLE.sch  LEDs.sch  POVRotateHW-cache.lib  POVRotateHW.csv  POVRotateHW.kicad_pcb  POVRotateHW.net  POVRotateHW.pro  POVRotateHW.sch  POVRotateHW.xml  Power.sch  issues.txt
UART_to_BLE_peripheral.cydsn/: UART_to_BLE_peripheral.cydwr  UART_to_BLE_peripheral.cyfit  UART_to_BLE_peripheral.cyprj  UART_to_BLE_peripheral.cyprj.Nick Butts
UART_to_BLE_peripheral.cydsn/Export/: PSoCCreatorExportIDE.xml
UART_to_BLE_peripheral.cydsn/TopDesign/: TopDesign.cysch
UART_to_BLE_peripheral.cydsn/codegentemp/: BLE.c  BLE.h  BLE_custom.h  Conn_LED.c  Conn_LED_aliases.h  UART_SPI_UART.h  UART_to_BLE_peripheral.ctl  UART_to_BLE_peripheral.cycdx  UART_to_BLE_peripheral.pci  UART_to_BLE_peripheral.pco  UART_to_BLE_peripheral.route  UART_to_BLE_peripheral.rpt  UART_to_BLE_peripheral.rt_log  UART_to_BLE_peripheral.sdc  UART_to_BLE_peripheral.sdf  UART_to_BLE_peripheral.svd  UART_to_BLE_peripheral.v  UART_to_BLE_peripheral.vh2  UART_to_BLE_peripheral.wde  UART_to_BLE_peripheral_p.pco  UART_to_BLE_peripheral_p.vh2  UART_to_BLE_peripheral_r.vh2  UART_to_BLE_peripheral_t.lib  UART_to_BLE_peripheral_t.vh2  UART_to_BLE_peripheral_timing.html  UART_to_BLE_peripheral_u.sdc  bitstream.txt  cyfitter.h  cyfitter_cfg.c  cyfittergnu.inc  elab_dependencies.txt  generated_files.txt  project.h  project_ids.txt
gcc-arm-none-eabi/: README.txt
libStringUI/: CMakeLists.txt
libStringUI/include/: ee_printf.h
libStringUI/src/: ee_printf.c
libstm32l0/: .cproject  .mxproject  .project  CMakeLists.txt  STM32L052C8Tx_FLASH.ld  libstm32l0.ioc  libstm32l0.xml
libstm32l0/Inc/: mxconstants.h  stm32l0xx_hal_conf.h  usb_device.h  usbd_conf.h
libstm32l0/Src/: stm32l0xx_hal_msp.c  stm32l0xx_it.c  usbd_conf.c
st_eeprom.cylib/: EEProm.c  EEProm.h  st_eeprom.cyprj  st_eeprom.cyprj.Nick Butts
(+83 files in other folders)
